Finish switch pair generation

--- a/inputData/config/mvWithSwitches.conf
+++ b/inputData/config/mvWithSwitches.conf
@@ -14,19 +14,18 @@ io {
       fileEncoding = "UTF-8"
       fileEnding = ".csv"
       separator = ";"
-      directoryHierarchy = false
+      directoryHierarchy = true
     }
 
-    targetFolder = "convertedData/mvLvNoSwitches"
+    targetFolder = "/Users/thomas/IdeaProjects/simBench2psdm/convertedData"
     compress = false
   }
   
   simbenchCodes = [
-//    "1-LV-rural1--2-no_sw",
+//    "1-LV-rural1--1-no_sw",
 //    "1-MV-comm--0-sw",
 //    "1-MV-comm--1-sw",
 //    "1-MV-comm--2-sw",
-
 //    "1-MV-rural--0-sw",
     "1-MV-rural--0-no_sw",
 
@@ -42,5 +41,5 @@ io {
 }
 
 conversion {
-  removeSwitches = false
+  removeSwitches = true
 }
