Update dependabot.yml ignores (scalatest)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,4 +18,4 @@ updates:
           - ">= 1.5.a, < 1.6"
       - dependency-name: org.scalatest:scalatest_2.13
         versions:
-          - "3.3.0-SNAP2"
+          - "3.3.0-SNAP+"
