Adding conversion of pv plants into PvInputs.

--- a/.gitignore
+++ b/.gitignore
@@ -153,4 +153,4 @@ testData/download
 !testData/download/targetFolderExistsAndIsFile.zip
 
 # Downloader productive folder
-inputData/download
+input/download
