--- a/src/main/resources/config-template.conf
+++ b/src/main/resources/config-template.conf
@@ -10,16 +10,17 @@ io {
   simbenchCodes = ["String"]
   input {
     download.baseUrl = "String" | "http://141.51.193.167/simbench/gui/usecase/download"
-    download.folder = "String" | "inputData/download/"
+    download.folder = "String" | "input/download/"
     download.failOnExistingFiles = "Boolean" | false
     csv = CsvConfig
   }
   output {
     csv = CsvConfig
-    targetFolder = "String" | "convertedData"
+    targetFolder = "String" | "output"
     compress = "Boolean" | true
   }
 }
 conversion {
   removeSwitches = "Boolean" | false
+  convertPv = "Boolean" | false
 }
