--- a/build.gradle
+++ b/build.gradle
@@ -72,8 +72,8 @@ dependencies {
 	implementation 'org.apache.logging.log4j:log4j-core:+' // log4j
 	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:+' // log4j -> slf4j
 
-	implementation "com.typesafe.scala-logging:scala-logging_${scalaVersion}:+" // akka scala logging
-	implementation "org.slf4j:log4j-over-slf4j:${slf4jVersion}" // slf4j -> log4j
+	implementation "com.typesafe.scala-logging:scala-logging_${scalaVersion}:3.9.5" // pekko scala logging
+	implementation "ch.qos.logback:logback-classic:1.5.6"
 
 	// NEW scala libs //
 	// CORE Scala //
