Add option to use local files instead of download.

--- a/src/main/resources/config-template.conf
+++ b/src/main/resources/config-template.conf
@@ -9,9 +9,14 @@ CsvConfig {
 io {
   simbenchCodes = ["String"]
   input {
-    download.baseUrl = "String" | "http://141.51.193.167/simbench/gui/usecase/download"
-    download.folder = "String" | "inputData/download/"
-    download.failOnExistingFiles = "Boolean" | false
+    folder = "String" | "input/download"
+    useLocalFiles = "Boolean" | true
+
+    #optional
+    download {
+        baseUrl = "String" | "http://141.51.193.167/simbench/gui/usecase/download"
+        failOnExistingFiles = "Boolean" | false
+    }
     csv = CsvConfig
   }
   output {
