Improving test coverage.

--- a/src/main/resources/config-template.conf
+++ b/src/main/resources/config-template.conf
@@ -10,9 +10,13 @@ io {
   simbenchCodes = ["String"]
   input {
     folder = "String" | "input/download"
-    useLocalFiles = "Boolean" | true
 
-    #optional
+    #@optional
+    localFile {
+        isZipped = "Boolean" | true
+        failOnExistingFiles = "Boolean" | false
+    }
+    #@optional
     download {
         baseUrl = "String" | "http://141.51.193.167/simbench/gui/usecase/download"
         failOnExistingFiles = "Boolean" | false
