--- a/src/main/resources/config-template.conf
+++ b/src/main/resources/config-template.conf
@@ -9,7 +9,7 @@ CsvConfig {
 io {
   simbenchCodes = ["String"]
   input {
-    folder = "String" | "input/download"
+    folder = "String" | "input/download/"
 
     #@optional
     localFile {
