Implementing requested changes.

--- a/input/config/localFileSourceConfig.conf
+++ b/input/config/localFileSourceConfig.conf
@@ -23,9 +23,12 @@ io {
       directoryHierarchy = false
     }
 
-    targetFolder = "convertedData/grids"
+    targetFolder = "convertedData/local/"
     compress = false
   }
-  
-  simbenchCodes = []
+
+  # code for local files
+  simbenchCodes = [
+    "1-LV-rural1--0-no_sw"
+  ]
 }
