Fixed Downloader by implementing the Extractor class

--- a/src/main/resources/config-template.conf
+++ b/src/main/resources/config-template.conf
@@ -9,7 +9,7 @@ CsvConfig {
 io {
   simbenchCodes = ["String"]
   input {
-    download.baseUrl = "String" | "http://141.51.193.167/simbench/gui/usecase/download"
+    download.baseUrl = "String" | "https://daks.uni-kassel.de/bitstreams"
     download.folder = "String" | "inputData/download/"
     download.failOnExistingFiles = "Boolean" | false
     csv = CsvConfig
