--- a/src/main/resources/config-template.conf
+++ b/src/main/resources/config-template.conf
@@ -9,7 +9,7 @@ CsvConfig {
 io {
   simbenchCodes = ["String"]
   input {
-    folder = "String" | "input/download/"
+    directory = "String" | "input/download/"
 
     #@optional
     localFile {
@@ -18,14 +18,14 @@ io {
     }
     #@optional
     download {
-    download.baseUrl = "String" | "https://daks.uni-kassel.de/bitstreams"
+        baseUrl = "String" | "https://daks.uni-kassel.de/bitstreams"
         failOnExistingFiles = "Boolean" | false
     }
     csv = CsvConfig
   }
   output {
     csv = CsvConfig
-    targetFolder = "String" | "convertedData"
+    targetDir = "String" | "convertedData"
     compress = "Boolean" | true
   }
 }
