--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ plugins {
 	id 'jacoco' // java code coverage plugin
 	id "org.sonarqube" version "6.1.0.5360" // sonarqube
 	id 'org.scoverage' version '8.1' // Code coverage plugin for scala
+	id 'net.thauvin.erik.gradle.semver' version '1.0.4' // semantic versioning
 	id "com.github.maiflai.scalatest" version "0.33" // run scalatest without specific task
 }
 
@@ -35,6 +36,9 @@ apply from: scriptsLocation + 'spotless.gradle'
 apply from: scriptsLocation + 'checkJavaVersion.gradle'
 apply from: scriptsLocation + 'tscfg.gradle' // config tasks
 apply from: scriptsLocation + 'scoverage.gradle'
+apply from: scriptsLocation + 'semVer.gradle'
+apply from: scriptsLocation + 'branchName.gradle'
+apply from: scriptsLocation + 'mavenCentralPublish.gradle'
 
 repositories {
 	mavenCentral()
@@ -101,6 +105,6 @@ wrapper {
 	gradleVersion = '7.6'
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
 	options.encoding = 'UTF-8'
 }
