Updated to `scala3`

--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ ext {
 	//version (changing these should be considered thoroughly!)
 	javaVersion = JavaVersion.VERSION_17
 
-	scalaVersion = '2.13'
-	scalaBinaryVersion = '2.13.16'
+	scalaVersion = '3'
+	scalaBinaryVersion = '3.6.4'
 	tscfgVersion = '1.2.4'
 	slf4jVersion = '2.0.17'
 
@@ -54,7 +54,7 @@ dependencies {
 	}
 
 	/* util functions */
-	implementation('com.github.ie3-institute:PowerSystemUtils:2.2.1') {
+	implementation('com.github.ie3-institute:PowerSystemUtils:3.0.0') {
 		exclude group: 'org.apache.logging.log4j'
 		exclude group: 'org.slf4j'
 		/* Exclude our own nested dependencies */
@@ -77,8 +77,8 @@ dependencies {
 
 	// NEW scala libs //
 	// CORE Scala //
-	implementation "org.scala-lang:scala-library:$scalaBinaryVersion"
-	implementation 'org.scala-lang.modules:scala-parallel-collections_2.13:1.2.0'
+	implementation "org.scala-lang:scala3-library_3:$scalaBinaryVersion"
+	implementation "org.scala-lang.modules:scala-parallel-collections_$scalaVersion:1.2.0"
 
 	// TEST Scala //
 	testImplementation "org.scalatest:scalatest_${scalaVersion}:3.2.19"
@@ -88,7 +88,7 @@ dependencies {
 
 	// config //
 	implementation 'com.typesafe:config:+'
-	implementation "com.github.carueda:tscfg_2.13:${tscfgVersion}"
+	implementation "com.github.carueda:tscfg_$scalaVersion:${tscfgVersion}"
 
 	// cmd args parser //
 	implementation "com.github.scopt:scopt_${scalaVersion}:+"
@@ -98,7 +98,7 @@ dependencies {
 }
 
 wrapper {
-	gradleVersion = '7.6'
+	gradleVersion = '8.13'
 }
 
 tasks.withType(JavaCompile) {
