--- a/gradle/scripts/spotless.gradle
+++ b/gradle/scripts/spotless.gradle
@@ -14,7 +14,7 @@ spotless {
 
 	//sets a license header, removes unused imports and formats conforming to the scala fmt formatter
 	scala {
-		scalafmt()
+		scalafmt().configFile('.scalafmt.conf')
 	}
 
 	/* cf. https://github.com/diffplug/spotless/tree/master/plugin-gradle */
@@ -36,7 +36,7 @@ spotless {
 	format 'misc', {
 		target '**/*.md', '**/.gitignore', 'configs/**'
 		trimTrailingWhitespace()
-		indentWithTabs()
+		leadingSpacesToTabs()
 		endWithNewline()
 	}
 }
