Fixing failing tests.

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ apply from: scriptsLocation + 'spotless.gradle'
 apply from: scriptsLocation + 'checkJavaVersion.gradle'
 apply from: scriptsLocation + 'tscfg.gradle' // config tasks
 apply from: scriptsLocation + 'scoverage.gradle'
+apply from: scriptsLocation + 'tests.gradle'
 
 repositories {
 	mavenCentral()
