--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,2 +1,7 @@
 version = 3.8.1
 runner.dialect = scala3
+
+rewrite.scala3.convertToNewSyntax = true
+rewrite.scala3.removeOptionalBraces = no
+
+rewrite.rules = []
