--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id "com.jfrog.artifactory" version "5.1.11"
+	id 'groovy' // groovy support
 	id 'java' // java support
 	id 'scala' // scala support
 	id 'pmd' // code check, working on source code
