Adapting to changes in `main`.

--- a/input/config/localFileSourceConfig.conf
+++ b/input/config/localFileSourceConfig.conf
@@ -1,7 +1,7 @@
 # Simple config to convert only one simple lv grid
 io {
   input {
-    folder = "input/local/"
+    directory = "input/local/"
 
     localFile = {
         isZipped = true
